# PixelFactory

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: CMakeLists.txt
examples/SDL2/: CMakeLists.txt  pf_sdl2_common.h
examples/SDL2/2d/: SDL2_circle_2d.c  SDL2_lines_2d.c
examples/SDL2/3d/: SDL2_triangle_3d.c
examples/raylib/: CMakeLists.txt  circle.c  framebuffer.c  lines.c  texture2d.c
examples/raylib/2d/: mesh2d.c  raylib_circle_2d.c  raylib_framebuffer_2d.c  raylib_lines_2d.c  raylib_mesh_2d.c  raylib_rect_2d.c  raylib_texture_2d.c  raylib_triangle_2d.c  rect.c  texture2d.c  triangle.c
examples/raylib/3d/: light.c  lines.c  model.c  pf_raylib_helper_3d.h  points.c  raylib_first_person_3d.c  raylib_lighting_3d.c  raylib_lines_3d.c  raylib_model_3d.c  raylib_points_3d.c  raylib_triangle_3d.c  triangle.c
include/pixelfactory/: pf.h  pf_camera2d.h  pf_camera3d.h  pf_color.h  pf_config.h  pf_depth.h  pf_depthbuffer.h  pf_framebuffer.h  pf_helper.h  pf_pixel.h  pf_processors.h  pf_renderer2d.h  pf_renderer3d.h  pf_simd.h  pf_stdinc.h  pf_texture2d.h  pf_vertex.h
include/pixelfactory/components/: pf_attribute.h  pf_color.h  pf_depth.h  pf_pixel.h  pf_processors.h  pf_simd.h  pf_types.h  pf_vertex.h
include/pixelfactory/core/: pf_depthbuffer.h  pf_framebuffer.h  pf_renderer.h  pf_renderer2d.h  pf_renderer3d.h  pf_texture2d.h  pf_vertexbuffer.h
include/pixelfactory/math/: pf_mat3.h  pf_mat4.h  pf_math.h  pf_vec2.h  pf_vec3.h  pf_vec4.h
include/pixelfactory/misc/: pf_config.h  pf_helper.h  pf_stdinc.h
include/pixelfactory/utils/: pf_camera2d.h  pf_camera3d.h
src/: pf_camera2d.c  pf_camera3d.c  pf_color.c  pf_depth.c  pf_depthbuffer.c  pf_framebuffer.c  pf_pixel.c  pf_processors.c  pf_texture2d.c
src/components/: pf_attribute.c  pf_color.c  pf_pixel.c  pf_processors.c  pf_vertex.c
src/core/: pf_depthbuffer.c  pf_framebuffer.c  pf_texture2d.c  pf_vertexbuffer.c
src/core/renderer/: pf_renderer.c
src/core/renderer/draw2d/: pf_circle2d.c  pf_line2d.c  pf_rect2d.c  pf_texture2d.c  pf_triangle2d.c  pf_vetexbuffer2d.c
src/core/renderer/draw3d/: pf_line3d.c  pf_point3d.c  pf_triangle3d.c  pf_vertexbuffer3d.c
src/core/renderer/draw3d/internal/: pf_helper3d_internal.c  pf_line3d_internal.c  pf_point3d_internal.c  pf_triangle3d_internal.c
src/core/renderer2d/: pf_renderer2d.c
src/core/renderer2d/draw2d/: pf_texture2d.c  pf_vetexbuffer2d.c
src/core/renderer2d/shapes2d/: pf_circle2d.c  pf_line2d.c  pf_rect2d.c  pf_triangle2d.c
src/core/renderer3d/: pf_renderer3d.c
src/core/renderer3d/draw3d/: pf_line3d.c  pf_point3d.c  pf_triangle3d.c  pf_vertexbuffer3d.c
src/core/renderer3d/draw3d/internal/: pf_helper3d_internal.c  pf_line3d_internal.c  pf_point3d_internal.c  pf_triangle3d_internal.c
src/math/: pf_mat3.c  pf_mat4.c  pf_vec2.c  pf_vec3.c  pf_vec4.c
src/renderer2d/: pf_renderer2d.c
src/renderer2d/draw2d/: pf_texture2d.c  pf_vetexbuffer2d.c
src/renderer2d/shapes2d/: pf_circle2d.c  pf_line2d.c  pf_rect2d.c  pf_triangle2d.c
src/renderer3d/: pf_renderer3d.c
src/renderer3d/draw3d/: pf_line3d.c  pf_point3d.c  pf_triangle3d.c  pf_vertexbuffer3d.c
src/renderer3d/draw3d/internal/: pf_line3d_internal.c  pf_point3d_internal.c  pf_triangle3d_internal.c
src/utils/: pf_camera2d.c  pf_camera3d.c
